# rs-pderiv

./: Benchmarks.md  Cargo.toml  README.md
src/: lib.rs  main.rs  regex.rs  test.rs
src/regex/: bits.rs  list.rs  parsetree.rs  pderiv.rs  re.rs  syntax.rs
src/regex/pderiv/: bits.rs  parse.rs  parse.rs_lazy  parse_lazy.rs  parsetree.rs  transduce.rs
src/regex/syntax/: desugar.rs  ext.rs  parser.rs  parsertwo.rs
src/test/: test_bits.rs  test_desugar.rs  test_parse.rs  test_parse_lazy.rs  test_parser.rs  test_pderiv.rs  test_transduce.rs
