[package]
name = "rs-pderiv"
version = "0.1.0"
edition = "2021"
license = "Apache 2.0"
description = "A regular expression matching library that utilizes partial derivative operation."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1"
intmap = "2.0.0"
combine = "4.6.6"
# lazy_static = "1.4"